<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterServiceActivity">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/titleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/hostHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/host"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:id="@+id/categoryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_category"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">

            <AutoCompleteTextView
                android:id="@+id/actualCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_margin"
                android:layout_marginEnd="@dimen/form_margin"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/descriptionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/addressHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/contactHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactNum"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:id="@+id/emailHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactEmail"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/baseline_error_24">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actualContactEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

</ScrollView>
